# elaborato2

./: .gitignore  CMakeLists.txt  README.md
sistemi_operativi/: CMakeLists.txt
sistemi_operativi/MentOS/: deadlock_prevention.c  smart_sem_user.c  smart_sem_user.c.c  syscall.c  syscall_types.h
sistemi_operativi/system_call/: CMakeLists.txt  client_0.c  defines.c  defines.h  err_exit.c  err_exit.h  semaphore.c  semaphore.h  server.c  shared_memory.c  shared_memory.h
